<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_forward"
        android:icon="@drawable/baseline_forward_white_24"
        android:title="@string/action_forward"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/baseline_file_copy_white_24"
        android:title="@string/action_copy"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/baseline_delete_white_24"
        android:title="@string/action_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_thumb_up"
        android:icon="@drawable/baseline_thumb_up_white_24"
        android:title="@string/action_thumb_up"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_thumb_down"
        android:icon="@drawable/baseline_thumb_down_white_24"
        android:title="@string/action_thumb_down"
        app:showAsAction="ifRoom" />

</menu>