<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/ivAvatar"
        style="@style/Circle52dp"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="8dp"
        android:scaleType="center"
        android:src="@drawable/ic_person_outline_white_24dp" />

    <LinearLayout
        style="@style/OvalBox52dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:backgroundTint="@color/primaryLightColor"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/default_username"
                android:textSize="@dimen/extra_large_text" />

            <TextView
                android:id="@+id/tvTimeSend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="@string/default_request_send_time"
                android:textSize="@dimen/small_text" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp">

            <Button
                android:id="@+id/btnAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="@drawable/oval_any_dp"
                android:backgroundTint="@color/primaryColor"
                android:text="@string/button_request_accept" />

            <Button
                android:id="@+id/btnReject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/btnAccept"
                android:layout_alignParentEnd="true"
                android:background="@drawable/oval_any_dp"
                android:text="@string/button_request_reject" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>